--- a/Affiliate/index2.html
+++ b/Affiliate/index2.html
@@ -81,7 +81,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
             // Define the smart contract address and ABI (add your ABI array here)
             const nftMintContractAddress = "0xbeB397c1a482D6739b71c357aB5D1cf4654342e1";
-            cconst nftMintABI = [
+            const nftMintABI = [
     {
         "inputs": [
             {
