--- a/Affiliate/index2.html
+++ b/Affiliate/index2.html
@@ -24,7 +24,7 @@
         <input type="text" id="nftPrice" name="nftPrice" placeholder="Enter NFT price" required>
 
         <input type="submit" value="Mint NFT">
-        <div id="submit-button" style="display: none;">Loading...</div>
+        <div id="loading" style="display: none;">Loading...</div>
         <div id="message"></div>
     </form>
 </div>
