--- a/Affiliate/index2.html
+++ b/Affiliate/index2.html
@@ -14,19 +14,19 @@
 <div class="container">
     <h1>NFT Minting & Affiliate Script Test</h1>
     <form id="mintForm">
-        <label for="nftName">NFT Name:</label>
-        <input type="text" id="nftName" name="nftName" placeholder="Enter NFT name" required>
+    <label for="nftName">NFT Name:</label>
+    <input type="text" id="nftName" name="nftName" placeholder="Enter NFT name" required>
 
-        <label for="nftDescription">NFT Description:</label>
-        <input type="text" id="nftDescription" name="nftDescription" placeholder="Enter NFT description" required>
+    <label for="nftDescription">NFT Description:</label>
+    <input type="text" id="nftDescription" name="nftDescription" placeholder="Enter NFT description" required>
 
-        <label for="nftPrice">NFT Price (in BNB):</label>
-        <input type="text" id="nftPrice" name="nftPrice" placeholder="Enter NFT price" required>
+    <label for="nftPrice">NFT Price (in BNB):</label>
+    <input type="text" id="nftPrice" name="nftPrice" placeholder="Enter NFT price" required>
 
-        <input type="submit" value="Mint NFT">
-        <div id="loading" style="display: none;">Loading...</div>
-        <div id="message"></div>
-    </form>
+    <input type="submit" id="submit-button" value="Mint NFT"> <!-- Added ID here -->
+    <div id="loading" style="display: none;">Loading...</div>
+    <div id="message"></div>
+</form>
 </div>
 
 
