--- a/Affiliate/index2.html
+++ b/Affiliate/index2.html
@@ -838,7 +838,9 @@ document.addEventListener('DOMContentLoaded', () => {
             const nftContract = new ethers.Contract(nftMintContractAddress, nftMintABI, signer);
 
             // Call the safeMint function of your smart contract
-            const transaction = await nftContract.safeMint(signer.getAddress(), nftPriceWei, uri, {value: nftPriceWei});
+            const address = await signer.getAddress();
+const transaction = await nftContract.safeMint(address, nftPriceWei, uri, {value: nftPriceWei});
+
             await transaction.wait(); // Wait for the transaction to be confirmed
 
             console.log('NFT Minted successfully!');
