--- a/Affiliate/index2.html
+++ b/Affiliate/index2.html
@@ -839,7 +839,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
             // Call the safeMint function of your smart contract
             const address = await signer.getAddress();
-const transaction = await nftContract.safeMint(address, nftPriceWei, uri, {value: nftPriceWei});
+const transaction = await nftContract.safeMint(address, amount, uri, { value: valueToSend });
 
             await transaction.wait(); // Wait for the transaction to be confirmed
 
