--- a/Affiliate/index2.html
+++ b/Affiliate/index2.html
@@ -839,7 +839,11 @@ document.addEventListener('DOMContentLoaded', () => {
 
             // Call the safeMint function of your smart contract
             const address = await signer.getAddress();
+const amount = .004; // Replace 123 with the actual value you want to use
+
+// Then, when calling the smart contract function, use the 'amount' variable
 const transaction = await nftContract.safeMint(address, amount, uri, { value: valueToSend });
+
 
             await transaction.wait(); // Wait for the transaction to be confirmed
 
