--- a/Affiliate/index2.html
+++ b/Affiliate/index2.html
@@ -847,7 +847,7 @@ const nftPriceWei = ethers.utils.parseEther(nftPriceInput);
 const uri = `data:application/json;base64,${btoa(JSON.stringify({ name: nftName, description: nftDescription }))}`;
 
 // Call the safeMint function of your smart contract
-const transaction = await nftContract.safeMint(addressToSendNFTTo, nftPriceWei, uri);
+const transaction = await nftContract.safeMint(addressToSendNFTTo, nftPriceWei, uri, "0x0000000000000000000000000000000000000000");
 
 
 
