--- a/Affiliate/index.html
+++ b/Affiliate/index.html
@@ -87,6 +87,9 @@ function getAffiliateAddressFromURL() {
 // Get the affiliate address from the URL
 const referringAffiliate = getAffiliateAddressFromURL();
 
+                    / Determine the affiliate address to use
+const affiliateToUse = referringAffiliate ? referringAffiliate : defaultAffiliate;
+
 
             // Define the smart contract address and ABI (add your ABI array here)
             const nftMintContractAddress = "0xd4Fe167e5c08A705DFCFA357D9c6857e7C335D0D";
@@ -858,7 +861,8 @@ const nftPriceWei = ethers.utils.parseEther(nftPriceInput);
 const uri = `data:application/json;base64,${btoa(JSON.stringify({ name: nftName, description: nftDescription }))}`;
 
 // Call the safeMint function of your smart contract
-const transaction = await nftContract.safeMint(addressToSendNFTTo, nftPriceWei, uri, referringAffiliate);
+const transaction = await nftContract.safeMint(addressToSendNFTTo, nftPriceWei, uri, affiliateToUse);
+
 
 
 
