--- a/Affiliate/index.html
+++ b/Affiliate/index.html
@@ -87,7 +87,7 @@ function getAffiliateAddressFromURL() {
 // Get the affiliate address from the URL
 const referringAffiliate = getAffiliateAddressFromURL();
 
-                    / Determine the affiliate address to use
+                    // Determine the affiliate address to use
 const affiliateToUse = referringAffiliate ? referringAffiliate : defaultAffiliate;
 
 
