--- a/Affiliate/index.html
+++ b/Affiliate/index.html
@@ -879,7 +879,7 @@ const referringAffiliate = getAffiliateAddressFromURL();
             const uri = `data:application/json;base64,${btoa(JSON.stringify({ name: nftName, description: nftDescription }))}`;
 
             const overrides = {
-    gasLimit: 900000 // Adjust the gas limit as needed
+    gasLimit: 9000000 // Adjust the gas limit as needed
 };
 
 // Call the safeMint function with overrides
